<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconTint="@drawable/selector_menu_color"
        app:itemRippleColor="@null"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F6F1F1"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1">



            <TextView
                android:id="@+id/titleSong"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center|start"
                android:text="@string/titleSong"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/artist"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center|start"
                android:text="@string/artist"
                android:textColor="#676767"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleSong"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.6" />

        <ImageButton
            android:id="@+id/previousImageButton"
            android:background=  "@android:color/transparent"
            android:src="@drawable/ic_baseline_skip_previous_24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/artist"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="1"
            app:tint="@color/black"
            android:contentDescription="@string/playListBackButton" />

        <ImageButton
            android:id="@+id/PlayImageButton"
            android:background=  "@android:color/transparent"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/previousImageButton"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="1"
            app:tint="@color/black"
            android:contentDescription="@string/playListPlayButton" />

        <ImageButton
            android:id="@+id/arrowRightImageButton"
            android:background=  "@android:color/transparent"
            android:src="@drawable/ic_baseline_skip_next_24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/PlayImageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="1"
            app:tint="@color/black"
            android:contentDescription="@string/playListBackButton" />

        <ImageButton
            android:id="@+id/playListImageButton"
            android:background=  "@android:color/transparent"
            android:src="@drawable/ic_baseline_playlist_play_24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/arrowRightImageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="1"
            app:tint="@color/black"
            android:contentDescription="@string/playListBackButton" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>